--- a/sys.conf
+++ b/sys.conf
@@ -27,7 +27,7 @@ conky.config = {
   -- color2 = '2ecc71',
   color2 = 'ff8600',
 
-  alignment = 'top_left',
+  alignment = 'top_right',
   no_buffers = true,
 
   gap_x = 32,
